# src/config/swagger.yml
@@ -15,6 +15,31 @@ servers:
     description: servidor local - desenvolvimento
 
 paths:
+  /sign:
+    post:
+      tags:
+        - Autorização
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref:  "#/components/schemas/admin-credentials"
+      summary: Token de autorização
+      description: Obtem o token de autorização para as rotas http POST.
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref:  "#/components/schemas/sign-response"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/unauthorized-error"
   /artists:
     get:
       summary: Retorna artistas
@@ -35,6 +60,8 @@ paths:
       description: Registra um novo artista e retorna seus dados.
       tags:
         - "Artistas"
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -54,15 +81,23 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/bad-request-error"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/unauthorized-error"
 
   /artists/{uuid}/upload:
     post:
       summary: Upload de foto
       description: Realiza o upload da foto do artista. Após enviado o artista terá
         a propriedade "isHidden" definida como "false", então poderá ser encontrado
-        na rota GET.
+        na rota http GET.
       tags:
         - "Artistas"
+      security:
+        - bearerAuth: []
       parameters:
         - name: uuid
           in: path
@@ -82,6 +117,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/artist-upload-response"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/unauthorized-error"
 
   /songs:
     get:
@@ -104,6 +145,8 @@ paths:
       description: Registra uma nova música e retorna seus dados
       tags:
         - "Músicas"
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -123,6 +166,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/bad-request-error"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/unauthorized-error"
 
   /songs/{uuid}/upload:
     post:
@@ -131,7 +180,9 @@ paths:
       summary: Upload dos arquivos da música
       description: Realiza o upload do arquivo de aúdio e capa do album/música.
         Após enviada a música terá a propriedade "isHidden" definida como "false",
-        então poderá ser encontrada na rota GET.
+        então poderá ser encontrada na rota http GET.
+      security:
+        - bearerAuth: []
       parameters:
         - name: uuid
           in: path
@@ -151,9 +202,17 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/songs-register-response"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/unauthorized-error"
 
   /playlists:
     get:
+      summary: Retorna playlists
+      description: Returna uma lista com 20 playlists criadas. Querys ainda não disponíveis.
       tags:
         - "Playlists"
       responses:
@@ -165,8 +224,12 @@ paths:
                 $ref: "#/components/schemas/playlists-response"
 
     post:
+      summary: Registra uma playlist
+      description: Registra uma nova playlist e retorna seus dados
       tags:
         - "Playlists"
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -186,9 +249,29 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/bad-request-error"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/unauthorized-error"
 
 components:
   schemas:
+    admin-credentials:
+      type: object
+      properties:
+        password:
+          type: string
+          example: password
+
+    sign-response:
+      type: object
+      properties:
+        token:
+          type: string
+          example: eyJhbGUzI1NiIsInI6IkpXVCJ9.eyJpYXQ
+
     artists-response:
       type: object
       properties:
@@ -684,3 +767,12 @@ components:
           items:
             type: string
             example: invalid credentials
+
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
+security:
+  - bearerAuth: []
